--- a/.github/workflows/release-next.yml
+++ b/.github/workflows/release-next.yml
@@ -1,4 +1,4 @@
-name: Next Release
+name: Release Next
 on:
   repository_dispatch:
     types: [next]
@@ -52,7 +52,6 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
       - name: Publish (Lerna)
         env:
           NODE_AUTH_TOKEN: ${{secrets.HV_NPM_AUTOMATION_TOKEN}}
