--- a/.github/workflows/release-recover.yml
+++ b/.github/workflows/release-recover.yml
@@ -1,13 +1,13 @@
-name: Recover Release
+name: Release Recover
 on:
   workflow_dispatch:
 
 env:
   DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
   DOCUMENTATION_PUBLISH_BRANCH: master
-  DOCUMENTATION_PUBLISH_FOLDER: uikit/master
-  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for master of ${{ github.repository }}"
-  DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/master/
+  DOCUMENTATION_PUBLISH_FOLDER: uikit/${{ github.ref_name }}
+  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for ${{ github.ref_name }} of ${{ github.repository }}"
+  DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/${{ github.ref_name }}/
 
 jobs:
   Release:
@@ -48,14 +48,12 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
       - name: Publish (Lerna)
         env:
           NODE_AUTH_TOKEN: ${{secrets.HV_NPM_AUTOMATION_TOKEN}}
         run: |
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npx lerna publish from-package --no-git-reset --yes --no-verify-access
-
       - name: Get Releases Commit Message
         uses: actions/github-script@v3
         with:
@@ -64,18 +62,15 @@ jobs:
             const branch = await github.repos.getBranch({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              branch: "master"
+              branch: "${{ github.ref_name }}"
             })
-
             const commitMessage = branch.data.commit.commit.message
             const slackMessage = commitMessage.replace('chore(release): publish', '')
               .replace(/\n/g, "\\n")
               .replace(/\r/g, "\\r")
               .replace(/\t/g, "\\t")
               .replace(/\f/g, "\\f")
-
             core.exportVariable("SLACK_MESSAGE", slackMessage)
-
       - name: Start Documentation Deployment
         uses: bobheadxi/deployments@v0.4.3
         id: deployment
@@ -104,7 +99,6 @@ jobs:
         run: |
           mkdir -p ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}
           cp -r dist/* ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}
-
       - name: Push Documentation
         run: |
           cd ${{ github.workspace }}/gh-docs
@@ -113,7 +107,6 @@ jobs:
           git add -A ${DOCUMENTATION_PUBLISH_FOLDER}
           git commit -m "${DOCUMENTATION_PUBLISH_MESSAGE}"
           git push
-
       - name: Cleanup Folder
         if: always()
         run: rm -rf ${{ github.workspace }}/gh-docs
